--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -37,7 +37,7 @@
                     flex-direction: column;
                     justify-content: space-around;
                     align-items: center;
-                    height: 30vh;
+                    height: 40vh;
                     transition: 5s all;
                 }
                 .menu nav > ul li {
@@ -198,7 +198,11 @@
      }
     }
     @media(max-width: 700px) {
-
+        .mobile-nav {
+            #mobile-menu-nav {
+                height: 40vh;
+            }
+        }
         #block-click-mobile {
             p {
                 font-size: 12px;
